Add getUserByEmail and integration test